php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #28694 ReflectionExtension::getFunctions() crashes PHP
Submitted: 2004-06-08 13:22 UTC Modified: 2004-06-09 21:27 UTC
From: su1d at phpclub dot net Assigned: helly (profile)
Status: Closed Package: Reproducible crash
PHP Version: 5.0.0RC3 OS: *
Private report: No CVE-ID: None
 [2004-06-08 13:22 UTC] su1d at phpclub dot net
Description:
------------
Have a look at the code to get the idea.


Reproduce code:
---------------
$e = new ReflectionExtension('pcre'); var_dump($e->getFunctions());


Expected result:
----------------
a list of extension's functions


Actual result:
--------------
a list of extension's functions
followed by crash

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-06-09 09:33 UTC] derick@php.net
IT does not crash for me in Debug mode, but it does generate  overflows:

[Wed Jun  9 09:32:04 2004]  Script:  '-'
---------------------------------------
/dat/dev/php/php-5.0dev/Zend/zend_reflection_api.c(187) : Block 0x08583FA4 status:
Beginning:      Overrun (magic=0x08583AA0, expected=0x7312F8DC)
      End:      Unknown
---------------------------------------
[Wed Jun  9 09:32:04 2004]  Script:  '-'
---------------------------------------
/dat/dev/php/php-5.0dev/Zend/zend_reflection_api.c(187) : Block 0x08584064 status:
Beginning:      Overrun (magic=0x08583F90, expected=0x7312F8DC)
      End:      Unknown
---------------------------------------
[Wed Jun  9 09:32:04 2004]  Script:  '-'
---------------------------------------
/dat/dev/php/php-5.0dev/Zend/zend_reflection_api.c(187) : Block 0x08584124 status:
Beginning:      Overrun (magic=0x08584050, expected=0x7312F8DC)
      End:      Unknown
---------------------------------------
[Wed Jun  9 09:32:04 2004]  Script:  '-'
---------------------------------------
/dat/dev/php/php-5.0dev/Zend/zend_reflection_api.c(187) : Block 0x085841EC status:
Beginning:      Overrun (magic=0x0858D370, expected=0x7312F8DC)
      End:      Unknown
---------------------------------------
[Wed Jun  9 09:32:04 2004]  Script:  '-'
---------------------------------------
/dat/dev/php/php-5.0dev/Zend/zend_reflection_api.c(187) : Block 0x085842AC status:
Beginning:      Overrun (magic=0x085841D0, expected=0x7312F8DC)
      End:      Unknown
---------------------------------------
[Wed Jun  9 09:32:04 2004]  Script:  '-'
---------------------------------------
/dat/dev/php/php-5.0dev/Zend/zend_reflection_api.c(187) : Block 0x0858436C status:
Beginning:      Overrun (magic=0x08584298, expected=0x7312F8DC)
      End:      Unknown
---------------------------------------
[Wed Jun  9 09:32:04 2004]  Script:  '-'
---------------------------------------
/dat/dev/php/php-5.0dev/Zend/zend_reflection_api.c(187) : Block 0x0858442C status:
Beginning:      Overrun (magic=0x08584358, expected=0x7312F8DC)
      End:      Unknown
---------------------------------------

 [2004-06-09 09:48 UTC] derick@php.net
Andi says:
Best to assign this to Marcus or Timm? They wrote those bugs :)


 [2004-06-09 21:27 UTC] helly@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 13 10:00:01 2026 UTC