Fix Bug #28694 ReflectionExtension::getFunctions() crashes PHP